# Cora

./: README.md  main.py  pyproject.toml
Cora/: assistant.py  pyproject.toml  requirements.txt
